==============================================

New in this Isabelle version
----------------------------

*** General ***

* Syntax: symbol \<chi> is now considered a letter.  Potential
INCOMPATIBILITY in identifier syntax etc.

* Outer syntax: string tokens may contain arbitrary character codes
specified via 3 decimal digits (as in SML).  E.g. "foo\095bar" for
"foo_bar".


*** Pure ***

* Instantiation target allows for simultaneous specification of class
instance operations together with an instantiation proof.
Type-checking phase allows to refer to class operations uniformly.
See HOL/Complex/Complex.thy for an Isar example and
HOL/Library/Eval.thy for an ML example.  Supersedes previous
experimental versions.


*** HOL ***

* Theorems "power.simps" renamed to "power_int.simps".

* New class semiring_div provides basic abstract properties of semirings
with division and modulo operations.  Subsumes former class dvd_mod.

* Merged theories IntDef, Numeral and IntArith into unified theory Int.
INCOMPATIBILITY.

* Theory Library/Code_Index: type "index" now represents natural numbers rather
than integers.  INCOMPATIBILITY.

* New class "uminus" with operation "uminus" (split of from class "minus"
which now only has operation "minus", binary).  INCOMPATIBILITY.

* New primrec package.  Specification syntax conforms in style to
definition/function/....  No separate induction rule is provided.
The "primrec" command distinguishes old-style and new-style specifications
by syntax.  The former primrec package is now named OldPrimrecPackage.
When adjusting theories, beware: constants stemming for new-style
primrec specifications have authentic syntax.

* Library/Multiset: {#a, b, c#} abbreviates {#a#} + {#b#} + {#c#}.

* Library/ListSpace: new theory of arithmetic vector operations.

* Constants "card", "internal_split", "option_map" now with authentic
syntax.  INCOMPATIBILITY.

* Definitions subset_def, psubset_def, set_diff_def, Compl_def,